--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -24,14 +24,12 @@ e.g. alternate parameterization delta_1=log(gamma_1); delta_j=log(gamma_j-gamma_
 
 1d) simulations showing posterior predictive checks? Bayesian p-value or other Bayesian model checking
 
-1e) Case study with HIV data. Add model checking steps?
+1e) Case study with HIV data. Add model checking steps
 
 TO DO
 - Clean up section describing basic Bayesian ordinal model
 
 - Write section on extension to continuous, 'proof' related to priors for intercepts/heuristic argument?
-
-- verify that NPMLE likelihood and Bayes CPM likelihood are the same
 
 lower priority 
 lower priority -> 1b) figure out why hardcoded stan model doesn't match stan_polr when alpha=1, 0.5, 0.2, 2, 5, 1/ncat (other vals?), 
@@ -44,10 +42,10 @@ TO DO
 
 - add formula interface
 - note about centering predictors OR automatic centering of predictors (see brms and rstanarm which both do this)
-- clean up & update CDF, Mean, Quantile to accept list like rms::contrast rather than newdata data.frame to facilitate comparisons
+- clean up & update CDF, Mean, Quantile to accept list like rms::contrast rather than newdata data.frame to facilitate comparisons?
 - figure out Stan issue with non-symmetric link function 
 - add vignette using all examples from orm() documentation
-- verify priors are correct (Jacobian for induced dirichlet? See Betancourt ordinal regression blog post)
+- verify priors are correct (Jacobian for induced dirichlet? See Betancourt ordinal regression blog post) - DONE, don't need Jacobian if using pw_log_lik function as in stan_polr, also see  STAN User's guide 2.18.0 - 16.2 Reparameterizations and 16.3
 --use roxygen function notation similar to 'Copula modeling with R' - DONE
 
 - code for basic simulations
@@ -114,71 +112,55 @@ other lower priority issues/future extensions:
 
 <!-- ## Background -->
 
-Models for ordinal outcomes and extensions of these models using the Bayesian paradigm have been discussed extensively in the literature. 
-
 <!-- mini lit review for ordinal models and summarizing results of previous continuous CPM papers -->
 
-<!-- traditional models -->
-McCullagh and Nelder (other early ref) for frequentist ordinal models.
+Cumulative models for ordinal outcomes -- traditionally denoted cumulative link models (Agresti book citation) -- have been discussed extensively in the literature using both classical (frequentist) and Bayesian implementations. As these models are characterized by adding probabilities, not link functions, we prefer the nomenclature cumulative probability model (CPM). Under the frequentist paradigm, Walker and Duncan [@walker_estimation_1967] and McCullagh [@peter_mccullagh_regression_1980] described these models as an extension of dichotomous outcome regression models such as logistic and probit regression. A Bayesian CPM for ordinal regression was first detailed by Albert and Chib [@albert_bayesian_1993; @albert_bayesian_1997] and Johnson and Albert [@johnson_ordinal_1999]. Additional Bayesian CPMs including partial proportional odds[peterson and harrell], mixture link models [Lang], location-scale ordinal regression [citation] and multivariate ordinal outcomes are described in Congdon [@congdon_bayesian_2005]. In all these settings, the number of ordered outcome categories is implicitly assumed to be smaller (often much smaller) than the sample size. However, continuous data are also ordinal and can therefore be fit using CPMs. 
 
-<!-- Bayesian models -->
-A Bayesian CPM for ordinal regression was described by Albert and Chib [@albert_bayesian_1993; @albert_bayesian_1997] and Johnson and Albert [@johnson_ordinal_1999].
+Harrell [@harrell_regression_2015] and Liu [@liu_modeling_2017] describe how non-parametric maximum likelihood (NPMLE) estimation can be used for continuous outcomes under the CPM modeling framework. A key insight for these models is that continuous data can also be viewed as ordinal categorical data. CPMs for continuous outcomes have several advantages including invariance of regression coefficient estimates to monotonic outcome transformations and ability to handle mixed continuous/discrete outcomes such as those that arise with a lower or upper limits of detection. In addition CPMs directly model the full conditional cumulative distribution function, which also allows estimates of means, quantiles, and exceedance probabilities to be calculated from a single model.
 
-Congdon [@congdon_bayesian_2005], Others??
 
+<!-- other somewhat similar Bayesian models?? -->
 Mallick [???] - Similar model in context of survival data, also incorporates BNP prior, others??
-
-<!--freq continuous CPM -->
-Harrell [@harrell_regression_2015] and Liu [@liu_modeling_2017] describe how non-parametric maximum likelihood (NPMLE) estimation can be used for continuous outcomes under the CPM modeling framework. A key insight for these models is that continuous data can also be viewed as ordinal categorical data. CPMs for continuous outcomes have several advanatages including direct modeling of the full conditional cumulative distribution function, invariance of regression coefficient estimates to monotonic outcome transformations, and ability to handle mixed continuous/discrete outcomes such as those that arise with a lower or upper limits of detection.
 
 <!-- DESCRIBE PROBLEMS/GAPS in literature using previous methods here and how we solve them
 
 - contrasts and other functionals?
 - incorporate prior info?
-- similar strengths to Bayesian Survival - check there for add'l benefits
+- similar strengths to Bayesian Survival - check there for addt'l benefits
 
 -->
 
 <!-- what did we do? --> 
-In this paper, we develop Bayesian CPMs for continuous (and mixed?) outcomes. Bayesian CPMs inherit many of the properties of CPMs estimated using NPMLE and also have additional advantages including interpretation using posterior probbilities, and exact inference (within simulation error) when the log-likelihood is not well-approximated by a quadratic function [!! need to show example where this is the case in simulations] (ability to incorporate prior information if available, other extensions??).
-A primary challenge for the implementation of Bayesian CPMs for continuous outcomes is the specification of priors for the intercept parameters and we describe and implement several proposed strategies. Through simulations, we explore characteristics of Bayesian CPMs using several model specification and prior combinations and make comparisons to CPM estimates using NPMLE and Bayesian nonparametric (BNP) regression, another popular approach for flexibly modeling outcomes. Finally, we present a case study involving HIV biomarker data which involves which are both skewed and censored at a lower limit of detection.
+In this paper, we develop Bayesian CPMs for continuous and mixed outcomes. Bayesian CPMs inherit many of the properties of CPMs estimated using NPMLE and also have additional advantages including interpretation using posterior probabilities, the ability to incorporate available prior information, and exact inference (within simulation error) <!--when the log-likelihood is not well-approximated by a quadratic function [!! need to show example where this is the case in simulations]-->
+for quantities of interest without resorting to asymptotic approximations.
+A primary challenge for the implementation of Bayesian CPMs for continuous outcomes is the specification of priors for the intercept parameters and we describe several proposed strategies. Through simulations, we explore characteristics of Bayesian CPMs using several model specifications and prior combinations <!--and make comparisons to CPM estimates using NPMLE and Bayesian nonparametric (BNP) regression, another popular approach for flexibly modeling outcomes-->. Finally, we present a case study involving HIV biomarker data for which outcomes are both skewed and censored at a lower limit of detection.
 
 # Methods
 
 ## Cumulative Probability Models
 
-<!--The model benefits, including Bayesian benefits-->
-
-Cumulative Probability Models (CPM) are typically used for ordinal categorical outcomes. However, continuous outcomes are also ordinal. Using CPM models has several advantages including invariance to monotonic transformations and modeling the full conditional CDF which also allows estimates of means and quantiles to be calculated from a single model. CPMs can also handle an ordered mix of discrete/continuous outcome values, e.g. lower limit of detection <!--(Bayes extension hierarchical model/data augmentation for multiple censoring limits, etc?)-->. Utilizing a Bayesian paradigm allows generalization of the link function specification and exact inference for parameters and functionals based on posterior probabilities. <!--For nonlinear models whose parameters are non-symmetric or multimodal, significant insight can be gained by examining the complete posterior distribution vs. point estimates and intervals from a non-Bayesian analysis.-->
-
 ### Model formulation
 <!-- see Albert & Chib 1997 - sec 2, and Johnson & Albert Ordinal Data Modeling to clean up this section-->
-Let $Y_i$ be the outcome for individual $i=1,\ldots,n$ with $p$ associated covariates $\boldsymbol{X_i}=(X_{i1},\ldots,X_{ip})$ such that each $Y_i$ falls into one of $j=1,\ldots, J$ ordered categories. The $Y_i$ can be modeled using a $Categorical(\boldsymbol{\pi_i})$ or $Multinomial(1,\boldsymbol{\pi_i})$ distribution where $\boldsymbol{\pi_i}=(\pi_{i1}, \ldots, \pi_{iJ})$ are the probabilities of individual $i$ being in category $j$ and $\sum_{j=1}^{J}=1$. Note that the value of the $\pi_{ij}$ are dependent on $x_i$, but we suppress the conditional notation except where it is needed for clarity. The cumulative probability of falling into category $j$ or a lower category is $Pr(Y_i \le j)=\eta_{ij}=\sum_{k=1}^{j}\pi_{ik}$. The CPM relates the cumulative probabilities to the observed covariates through a monotonically increasing link function $G(\cdot)$
+Let $Y_i$ be the outcome for individual $i=1,\ldots,n$ with $p$ associated covariates $\boldsymbol{X_i}=(X_{i1},\ldots,X_{ip})$ such that each $Y_i$ falls into one of $j=1,\ldots, J$ ordered categories. The $Y_i$ can be modeled using a $Categorical(\boldsymbol{\pi_i})$ or $Multinomial(1,\boldsymbol{\pi_i})$ distribution where $\boldsymbol{\pi_i}=(\pi_{i1}, \ldots, \pi_{iJ})$ are the probabilities of individual $i$ being in category $j$ and $\sum_{j=1}^{J}=1$. Note that the value of the $\pi_{ij}$ are dependent on $x_i$, but we suppress the conditional notation except where it is needed for clarity. The cumulative probability of falling into category $j$ or a lower category is $Pr(Y_i \le j)=\eta_{ij}=\sum_{k=1}^{j}\pi_{ik}$. The CPM relates the cumulative probabilities to the observed covariates through a monotonically increasing link function $G^{-1}(\eta_{ij})=\gamma_{j}-\boldsymbol{x_i'\beta}$ or equivalently
 \begin{gather}
-Pr(Y \le j|X,\beta,\gamma)= G(\eta_{ij}) = G(\gamma_{j}-\boldsymbol{x_i'\beta})
+Pr(Y \le j|X,\beta,\gamma)=\eta_{ij}=G(\gamma_{j}-\boldsymbol{x_i'\beta})
 \end{gather}
 Where the $\gamma_j$ are latent continuous cutpoints $-\infty \equiv \gamma_0 < \gamma_1 < \cdots < \gamma_{J-1} <\gamma_J \equiv \infty$ and $\boldsymbol{\beta}$ is a vector of $p$ coefficients.
-For identifiability, the linear predictor $\boldsymbol{x_i'\beta}$ does not include an intercept, $\beta_0$. Common choices for $G(\cdot)$ are logit, $G(p)=\log\left(\frac{p}{1-p}\right)$, probit, $G(p)=\Phi^{-1}(p)$, and complementary log-log, $G(p)=\log(-\log(1-p))$. The probabilities of category membership are 
+For identifiability, the linear predictor $\boldsymbol{x_i'\beta}$ does not include an intercept, $\beta_0$. Common choices for $G^{-1}(\cdot)$ are logit, $G^{-1}(p)=\log\left(\frac{p}{1-p}\right)$; probit, $G^{-1}(p)=\Phi^{-1}(p)$; and complementary log-log, $G^{-1}(p)=\log(-\log(1-p))$. The probabilities of category membership are 
 \begin{gather}
 \label{eq:cellprobs}
-\pi_{ij}=\eta_{i,j}-\eta_{i,j-1}=G^{-1}(\gamma_j-\boldsymbol{x_i'\beta})-G^{-1}(\gamma_{j-1}-\boldsymbol{x_i'\beta})
+\pi_{ij}=\eta_{i,j}-\eta_{i,j-1}=G(\gamma_j-\boldsymbol{x_i'\beta})-G(\gamma_{j-1}-\boldsymbol{x_i'\beta})
 \end{gather}
-Then likelihood for an iid sample of observations $(y_1,\ldots,y_n)$ is
+Where the function $G(\cdot)$ is a cdf defined as the inverse of the link function (e.g., standard logistic and standard normal for the logit and probit links, respectively). The likelihood for an iid sample of observations $(y_1,\ldots,y_n)$ is
 \begin{gather}
 p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})=
-\prod_{j=1}^{J}\prod_{i:y_i=j}[G^{-1}(\gamma_j-\boldsymbol{x_i'\beta})-G^{-1}(\gamma_{j-1}-\boldsymbol{x_i'\beta})]
+\prod_{j=1}^{J}\prod_{i:y_i=j}[G(\gamma_j-\boldsymbol{x_i'\beta})-G(\gamma_{j-1}-\boldsymbol{x_i'\beta})]
 \end{gather}
 For continuous data with no ties $J=n$. Letting $r(y_i)$ be the rank of $y_i$ the likelihood reduces to
 \begin{gather}
 p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})=
-\prod_{i=1}^{n}[G^{-1}(\gamma_{r(y_i)}-\boldsymbol{x_i'\beta})-G^{-1}(\gamma_{r(y_i)-1}-\boldsymbol{x_i'\beta})]
+\prod_{i=1}^{n}[G(\gamma_{r(y_i)}-\boldsymbol{x_i'\beta})-G(\gamma_{r(y_i)-1}-\boldsymbol{x_i'\beta})]
 \end{gather}
-
-<!--Suppose $Z_i=\boldsymbol{x_i'\beta}  + \epsilon_i$ are continuous latent variables underlying each $y_i$ with error distribution $\epsilon_i \sim F$ where $F(\cdot)$ is a specified cumulative distribution function and $\boldsymbol{\beta}$ is a $p \times 1$ vector of coefficients. Thus, the probability of observation $y_i$ falling into category $j$ given the covariates $x_i$ is $\pi_{ij}=Pr(y_i=j)=Pr(\gamma_{j-1} < Z_i < \gamma_j)=F(\gamma_{j} - x_i'\beta) - F(\gamma_{j-1} - x_i'\beta)$. The $\gamma_j$ ($j=0,\ldots, J$) are ordered cutpoints which categorize the outcome and we assume $\gamma_0=-\infty$ and $\gamma_J=\infty$.  The cumulative probability of falling into category $j$ or a lower category is $\eta_{ij}=\sum_{k=1}^{j}\pi_{ik}$ and the CPM relates the 
-\begin{gather}
-Pr(Y \le j|X,\beta,\gamma)= \eta_{ij} = F(\gamma_{j}-\boldsymbol{x_i'\beta}),\, \text{for }i=1,\ldots,n,\, j=1,\ldots,J-1 
-\end{gather}
--->
 
 <!--
 As noted by Johnson & Albert [@johnson_ordinal_1999], the model with $J$ categories and $J-1$ cutpoints is nonidentifiable. There are two approaches to resolve this issue. The first approach fixes the value of one cutpoint or equivalently fixes the intercept in the regression function $Z=\boldsymbol{x'\beta} + \epsilon$ to be constant. Applying noninformative priors for the remaining cutpoints and $\beta$s along with the constraint $\gamma_1 \le \cdots \le \gamma_{J-1}$ results in maximum a posteriori (MAP) estimates which are equivalent to MLE estimates if there are moderate counts observed in each category. 
@@ -192,8 +174,12 @@ p(\boldsymbol{\gamma},\boldsymbol{\beta})\prod_{i=1}^{n}[F(\gamma_{y_i}-\boldsym
 !!! in above need summation/prod over $j$??, or indicator that for obs $i$ it is in category $j$ !!!
 -->
 
-To complete the model specification we define priors for the parameters $p(\boldsymbol{\beta},\boldsymbol{\gamma})$. We assume a priori independence between $\beta$ and $\gamma$ so $p(\boldsymbol{\beta},\boldsymbol{\gamma})=p(\boldsymbol{\beta})p(\boldsymbol{\gamma})$. To simplify the model formulation we also assume noninformative priors for the regression coefficients, $p(\boldsymbol{\beta}) \propto \boldsymbol{1}$ however weakly informative or informative priors can also be used. Several approaches have been suggested to specify priors for $\boldsymbol{\gamma}$ in the traditional CPM setting where $J \ll n$. McKinley et al. [@mckinley_bayesian_2015] and Congdon [@congdon_bayesian_2005] describe a sequentially truncated prior distribution that takes the form $p(\boldsymbol{\gamma})=p(\gamma_1)\prod_{j=2}^{J-1}p(\gamma_i|\gamma_{j-1})$ where the support of $p(\gamma_1)$ is $\mathbb{R}$ and the support of $p(\gamma_j)$ for $j=2,\ldots, J-1$ is $(\gamma_{j-1},\infty)$. For example using normal and truncated normal priors, $p(\gamma_1)\sim N(0, \sigma_\gamma^2)$ and $\gamma_j|\gamma_{j-1} \sim N(0, \sigma_\gamma^2)I(\gamma_{j-1},\infty)$. A second approach described by Albert and Chib [@albert_bayesian_1997] defines a prior on a transformation of the cutpoints to an unconstrained space. Let $\delta_1=\log(\gamma_1)$ and $\delta_j=\log(\gamma_j - \gamma_{j-1}),\, 2 \le j \le J-1$. Then a multivariate prior can be assigned to $\boldsymbol{\delta}$, e.g. $\boldsymbol{\delta} \sim N_{J-1}(\boldsymbol{\mu_0},\boldsymbol{\Sigma_0})$. 
-Both approaches provide priors that satisfy the ordering restriction for $\boldsymbol{\gamma}$, but may present challenges when using a CPM when the number of unique continuous data values is high.
+To complete the model specification we define priors for the parameters $p(\boldsymbol{\beta},\boldsymbol{\gamma})$. We assume a priori independence between $\beta$ and $\gamma$ so $p(\boldsymbol{\beta},\boldsymbol{\gamma})=p(\boldsymbol{\beta})p(\boldsymbol{\gamma})$. To simplify the model formulation we also assume noninformative priors for the regression coefficients, $p(\boldsymbol{\beta}) \propto \boldsymbol{1}$ however weakly informative or informative priors can also be used. <!--conditional means approach for defining joint prior fro Johnson & ALbert sec 4.2.2 pp 132 --> Several approaches have been suggested to specify priors for $\boldsymbol{\gamma}$ in the traditional CPM setting where $J \ll n$. McKinley et al. [@mckinley_bayesian_2015] and Congdon [@congdon_bayesian_2005] describe a sequentially truncated prior distribution that takes the form $p(\boldsymbol{\gamma})=p(\gamma_1)\prod_{j=2}^{J-1}p(\gamma_i|\gamma_{j-1})$ where the support of $p(\gamma_1)$ is $\mathbb{R}$ and the support of $p(\gamma_j)$ for $j=2,\ldots, J-1$ is $(\gamma_{j-1},\infty)$. For example using normal and truncated normal priors, $p(\gamma_1)\sim N(0, \sigma_\gamma^2)$ and $\gamma_j|\gamma_{j-1} \sim N(0, \sigma_\gamma^2)I(\gamma_{j-1},\infty)$. A second approach described by Albert and Chib [@albert_bayesian_1997] defines a prior on a transformation of the cutpoints to an unconstrained space. Let $\delta_1=\log(\gamma_1)$ and $\delta_j=\log(\gamma_j - \gamma_{j-1}),\, 2 \le j \le J-1$. Then a multivariate prior can be assigned to $\boldsymbol{\delta}$, e.g. $\boldsymbol{\delta} \sim N_{J-1}(\boldsymbol{\mu_0},\boldsymbol{\Sigma_0})$. 
+Both approaches provide priors that satisfy the ordering restriction for $\boldsymbol{\gamma}$, but may present challenges for the CPM when the number of unique continuous data values is high.
+
+!!!
+First approach, recursive dependence of priors
+The second approach requires specification of the $J-1$ $\mu_0$ vector and the $J-1 \times J-1$ covariance matrix.
 
 <!--
 This approach may also be challenging for our situation when the number of unique continuous data values is high because of the need to specify the $J-1$ $\mu_0$ vector and the $J-1 \times J-1$ covariance matrix.
@@ -203,18 +189,18 @@ Specifying priors for $\boldsymbol{\gamma}$ presents a challenge because of the 
  how sensitive are approaches above to sample size & cell counts?
 -->
 
-We instead adopt a third approach which specifies a prior on $\boldsymbol{\pi_i}$ (for a specified covariate vector) and to utilizes the transformation defined by $G(\cdot)$ to induce a prior on the $\boldsymbol{\gamma}$. [add Betancourt ref]
+We instead adopt a third approach which defines a prior on $\boldsymbol{\pi_i}$ for a prespecified covariate vector and utilizes the transformation defined by $G(\cdot)$ to induce a prior on the $\boldsymbol{\gamma}$ [@betancourt_ordinal_2019].
 Let $\pi_{.j} \equiv Pr(r(y)=j|x=0)$ be the probability of being in category $j$ when all the covariates are 0 and $\boldsymbol{\pi_{.}}=(\pi_{.1},\ldots,\pi_{.J})$. From equation \ref{eq:cellprobs} it follows that
 \begin{gather}
-\pi_{.j}=G^{-1}(\gamma_j-0)-G^{-1}(\gamma_{j-1}-0)=G^{-1}(\gamma_j)-G^{-1}(\gamma_{j-1})
+\pi_{.j}=G(\gamma_j-0)-G(\gamma_{j-1}-0)=G(\gamma_j)-G(\gamma_{j-1})
 \end{gather}
-These equations define a transformation $h(\boldsymbol{\gamma})=\boldsymbol{\pi_{.}}$ between the cutpoints and probabilities of category membership when all the covariates are 0. Conversely,
+These equations define a transformation $h(\boldsymbol{\gamma})=\boldsymbol{\pi_{.}}$ between the cutpoints and probabilities of category membership when all the covariates are 0 (or at their mean values if covariates have been centered). Conversely,
 \begin{gather}
-\sum_{k=1}^{j}\pi_{.k}=\sum_{k=1}^{j}\left[G^{-1}(\gamma_k)-G^{-1}(\gamma_{k-1})\right]=G^{-1}(\gamma_j)
+\sum_{k=1}^{j}\pi_{.k}=\sum_{k=1}^{j}\left[G(\gamma_k)-G(\gamma_{k-1})\right]=G(\gamma_j)
 \end{gather}
-so $G\left(\sum_{k=1}^{j}\pi_{.k}\right)=\gamma_j$ defines the inverse transformation. 
+so $G^{-1}\left(\sum_{k=1}^{j}\pi_{.k}\right)=\gamma_j$ defines the inverse transformation. 
 
-Because $\boldsymbol{y}$ has a multinomial distribution a conjugate Dirichlet distribution is a natural choice of prior for $\pi_{.}$. Setting $p(\pi_{.}) \propto \prod_{j=1}^{J}\pi_{.j}^{\alpha_j-1}$ the posterior distribution is
+Because $\boldsymbol{y}$ has a multinomial distribution a conjugate Dirichlet distribution is a natural choice of prior for $\boldsymbol{\pi_{.}}$. Setting $p(\boldsymbol{\pi_{.}}) \propto \prod_{j=1}^{J}\pi_{.j}^{\alpha_j-1}$ the posterior distribution is
 \begin{align}
 p(\boldsymbol{\gamma},\boldsymbol{\beta}|\boldsymbol{x},\boldsymbol{y}) & \propto p(\boldsymbol{\gamma})p(\boldsymbol{\beta}) p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})\\
 &\propto p(h(\boldsymbol{\gamma}))|\mathcal{J}|p(\boldsymbol{\beta}) p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})\\
@@ -223,32 +209,54 @@ p(\boldsymbol{\gamma},\boldsymbol{\beta}|\boldsymbol{x},\boldsymbol{y}) & \propt
 where $\mathcal{J}$ is the Jacobian of the transformation $h(\boldsymbol{\gamma})=\boldsymbol{\pi_{.}}$. Letting $\Omega=\sum_{j=1}^J\pi_{.j}=1$ be the constraint that the category probabilites must sum to 1, the entries in $\mathcal{J}$ where $\mathcal{J}_{r,c}$ is the term in row $r$ and column $c$ are
 \begin{align}
 \mathcal{J}_{j,1}&=\frac{\partial \pi_{.j}}{\partial \Omega}=1\\
-\mathcal{J}_{j+1,j+1}&=\frac{\partial \pi_{.j+1}}{\partial \gamma_j}=\frac{\partial}{\partial \gamma_j}\left[G^{-1}(\gamma_{j+1})-G^{-1}(\gamma_{j})\right]=-g(\gamma_j)\\
-\mathcal{J}_{j,j+1}&=\frac{\partial \pi_{.j}}{\partial \gamma_j}=\frac{\partial}{\partial \gamma_j}\left[G^{-1}(\gamma_{j})-G^{-1}(\gamma_{j-1})\right]=g(\gamma_j)
+\mathcal{J}_{j+1,j+1}&=\frac{\partial \pi_{.j+1}}{\partial \gamma_j}=\frac{\partial}{\partial \gamma_j}\left[G(\gamma_{j+1})-G(\gamma_{j})\right]=-g(\gamma_j)\\
+\mathcal{J}_{j,j+1}&=\frac{\partial \pi_{.j}}{\partial \gamma_j}=\frac{\partial}{\partial \gamma_j}\left[G(\gamma_{j})-G(\gamma_{j-1})\right]=g(\gamma_j)
 \end{align}
-With $\mathcal{J}_{r,c}=0$ for all other entries.
-!!!! NB: $G^{-1}()$ is cdf so $g()$ is pdf, need to correct notation throughout so that $G^{-1}()$ is inverse cdf/quantile and $G()$ is cdf
+Where $j=1,\ldots,J-1$, $g(\cdot)$ is the pdf of the distribution $G(\cdot)$, and $\mathcal{J}_{r,c}=0$ for all other entries. The form of the Jacobian is
+<!--!!!! NB: $G^{-1}()$ is cdf so $g()$ is pdf, need to correct notation throughout so that $G^{-1}()$ is inverse cdf/quantile and $G()$ is cdf
+-->
 
-\begin{equation}
+<!--
  \begin{vmatrix} 
  \mathcal{J}_{11} & \mathcal{J}_{12} & \mathcal{J}_{13} & \mathcal{J}_{14}\\
  \mathcal{J}_{21} & \mathcal{J}_{22} & \mathcal{J}_{23} & \mathcal{J}_{24}\\
  \mathcal{J}_{31} & \mathcal{J}_{32} & \mathcal{J}_{33} & \mathcal{J}_{34}\\
  \mathcal{J}_{41} & \mathcal{J}_{42} & \mathcal{J}_{43} & \mathcal{J}_{44}\\
  \end{vmatrix}\\
- = \begin{vmatrix} 
- 1 & g(\gamma_1)  & 0            & 0\\
- 1 & -g(\gamma_1) & g(\gamma_2)  & 0\\
- 1 & 0            & -g(\gamma_2) & g(\gamma_3)\\
- 1 & 0            & 0            & -g(\gamma_3)\\
- \end{vmatrix}
+ =
+-->
+
+\begin{equation}
+\begin{vmatrix} 
+1      &  g(\gamma_1)  &  0            & 0           & \cdots           & 0 \\
+1      & -g(\gamma_1)  &  g(\gamma_2)  & 0           & \cdots           & 0 \\
+1      & 0             & -g(\gamma_2)  & g(\gamma_3) & \cdots           & 0 \\
+\vdots & \vdots        &  \vdots       & \vdots      & \ddots           & \vdots \\
+1      & 0             &  0            & 0           & -g(\gamma_{j-1}) & g(\gamma_j)\\
+1      & 0             &  0            & 0           & 0                & -g(\gamma_j)\\
+\end{vmatrix}
 \end{equation}
+
+
+The Dirichlet prior on $\boldsymbol{\pi_{.}}$ along with the transformation $h(\cdot)$ induces a prior for the $\boldsymbol{\gamma}$. The choice of $\alpha_j$ controls how concentrated the induced prior is around the MLEs for the cutpoints when $X=0$.
+
+Figure \@ref(fig:probit-induced) shows induced priors
+
+```{r probit-induced, fig.cap="Induced priors", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","probit_induced.png"))
+```
 
 Assuming a symmetric Dirichlet distribution $\alpha_1 = \alpha_2 = \cdots = \alpha_n$, we explore several possible choices for the $\alpha_j$ parameters
 
-[possible choices 1/J, 1/2 Jeffrey's, 1 uniform, Frank's prior, prior to match MLE? - where $\alpha_j =\frac{1}{J}$ for all $j$]. 
-
 show draws of $\boldsymbol{\gamma}$ induced priors for each of the possible prior choices for $\alpha_j$
+
+[possible choices Uniform 1, Jeffrey's 1/2, Objective?? $\alpha_j =\frac{1}{J}$ for all $j$, 1/(0.8 + 0.35 * max(n, 3))]. 
+
+
+
+In multi-parameter models, the optimal choice of reference prior depends on the parameter or statistic of interest (e.g. $\beta$, conditional CDF, conditional mean)  so we seek a value of $\alpha$ that will provide a overall default for a variety of settings and quantities of interest ... following the approach of Berger et al. [@berger_overall_2015].  
+
+We explore several choices of prior with a goal of fin
 
 
 (prior predictive distribution - first draw params from Dirichlet, then draw cdf vals see BDA3 p 7, plot ranks on x-axis and cdf val on y-axis)
@@ -264,6 +272,9 @@ $\alpha > 1$ favors equally distributed counts (If all concentration parameters 
 using a symmetric Dirichlet distribution so $\alpha_1=\alpha_2=\cdots=\alpha_n=1$ implies a posterior distribution of $p(\boldsymbol{p_i}|y) \propto Dirichlet(1+n_1,1+n_2,\ldots,1+n_J)$ where $n_j$ is the number of observations in each category.
 -->
 
+
+
+
 ### Conditional Functionals
 
 <!--
@@ -272,7 +283,7 @@ using a symmetric Dirichlet distribution so $\alpha_1=\alpha_2=\cdots=\alpha_n=1
 
 Using MCMC samples from the posterior distribution ($\tilde{\gamma}$, $\tilde{\beta}$) it is straightforward to calculate the posterior conditional CDF, mean, quantiles or other functionals as shown in the table.
 
-- Posterior conditional CDF:  $\tilde{F}(y_i|\boldsymbol{x}_i)=G^{-1}(\tilde{\gamma}_{r(y_i)}-\boldsymbol{x}_i^{T}\tilde{\boldsymbol{\beta}})$
+- Posterior conditional CDF:  $\tilde{F}(y_i|\boldsymbol{x}_i)=G(\tilde{\gamma}_{r(y_i)}-\boldsymbol{x}_i^{T}\tilde{\boldsymbol{\beta}})$
 
 - Posterior conditional mean:
 $\tilde{E}[Y|\boldsymbol{x}_i]=\sum_{i=1}^{n}y_i\tilde{f}(y_i|\boldsymbol{x}_i)$ where $\tilde{f}(y_i|\boldsymbol{x}_i)=\tilde{F}(y_i|\boldsymbol{x}_i)-\tilde{F}(y_{i-1}|\boldsymbol{x}_i)$
@@ -346,7 +357,7 @@ add hyperprior so $\alpha \sim Gamma(a,b)$ (some sort of weakly informative, pos
 -->
 
 
-## Simulation Set-up
+## Simulations
 
 To evaluate the long-run frequency properties of the Bayesian CPM we generate data from two simulation models.
 
@@ -356,12 +367,14 @@ where $\beta_1=1$, $\beta_2=-0.5$, $X_1 \sim Bernoulli(0.5)$ and $X_2 \sim N(0,1
 
 The second simulation model uses identical datasts, but sets values of $Y<0$ to 0 to produce a mixed discrete/continuous outcome. $1000$ datasets were simulated for sample sizes $n=25,50,100,200$ and $400$
 
-A Bayesian CPM (using which prior??) with the properly specified probit link was fit to each simulated dataset across the two outcome models. For comparison, the NPMLE CPM model <!--and the [BNP model for residuals]--> were also fit to each dataset. The average bias of the posterior medians and standard errors of $\beta_1$ and $\beta_2$ were compared for the three models. In addition, five posterior intercept parameter estimates were compared for the Bayesian and frequentist CPM models.
+A Bayesian CPM using three $\alpha$ concentration hyperparameters for $p(\boldsymbol{\pi_{.}})$ with the properly specified probit link was fit to each simulated dataset across the two outcome models. <!-- For comparison, the NPMLE CPM model [and the BNP model for residuals] were also fit to each dataset. --> The average bias of the posterior medians and standard errors of $\beta_1$ and $\beta_2$ were compared for the three models. In addition, five posterior intercept parameter estimates were compared for the Bayesian and frequentist CPM models.
+
+add sims for conditional CDF, mean, and quantile
 
 <!--
 additional sims
 
-need a case where likelihood not well approximated by quadratic function (ie NPMLE doesn't work well but Bayes CPM works)
+case where likelihood not well approximated by quadratic function (ie NPMLE doesn't work well but Bayes CPM works)?
 
 weird shapes (i.e. mixture distributions); mixture continuous/discrete (lower limit of detection) - see Yuqi's paper for ideas
 -->
@@ -378,7 +391,7 @@ Describe posterior predictive checks, Bayesian p-value or some additional Bayesi
 Use HIV data from Dr. Koethe. Describe background, data and modeling approach
 -->
 
-The data for the case study were collected from 216 HIV-postive adults on antiretroviral therapy in two cohort studies. Further details on the study design and cohorts are provided in ???. Because people living with HIV have increased risk of diabetes and cardiovascular disease, the aim of the analysis is to estimate the association between body mass index (BMI) and several inflammation biomarkers in this population, adjusting for additional covariates (age, sex, race, smoking status, study location and CD4 cell count).
+The data for the case study were collected from 216 HIV-positive adults on antiretroviral therapy in two cohort studies. Further details on the study design and cohorts are provided in ???. Because people living with HIV have increased risk of diabetes and cardiovascular disease, the aim of the analysis is to estimate the association between body mass index (BMI) and several inflammation biomarkers in this population, adjusting for additional covariates (age, sex, race, smoking status, study location and CD4 cell count).
 
 The biomarkers of interest are (IL-6) and IL-1-$\beta$. Both biomarkers are skewed and have values censored below a lower limit of detection. To account for skewness and censoring in the outcomes we fit a Bayesian CPM model using a probit link function to estimate the association between BMI and the conditional mean, median, and 90th quantile of each biomarker.
 
@@ -387,22 +400,24 @@ The biomarkers of interest are (IL-6) and IL-1-$\beta$. Both biomarkers are skew
 
 ## Simulations
 
-!!! seminar slide 19 - 20 !!!
+!!! add new sim plots !!!
 
 Figure \@ref(fig:simplt1) presents the results of the Bayesian CPM model for the uncensored simulation data 
 
-```{r simplt1, fig.cap="Bias in uncensored simulations", fig.align='center', out.width='75%'}
-knitr::include_graphics(file.path(wd,"fig","sim_full.png"))
+```{r simplt1, fig.cap="Bias in uncensored simulations", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_param_full2.png"))
 ```
 
-```{r simplt2, fig.align='center', out.width='75%'}
-knitr::include_graphics(file.path(wd,"fig","sim_cens.png"))
+```{r simplt2, fig.cap="Bias in censored simulations", fig.align='center', out.width='90%'}
+knitr::include_graphics(file.path(wd,"fig","sim_param_cens2.png"))
 ```
 
-Describe results from graphs, compare and contrast the 3 models with focus on 
+Describe results from graphs, compare and contrast the prior models
 
 
 ## Case Study 
+
+Add sensitivity analysis and other Bayesian modeling checks (convergence and model)
 
 ```{r il6_1, fig.align='center', out.width='75%'}
 knitr::include_graphics(file.path(wd,"fig","il_6_post.png"))
